# xcp_derp-UI-Release

./: .comfyignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  DEEPSEEK-ENHANCE.md  LICENSE  README.md  __init__.py  _bump.py  _fix_ver.py  bundled_asset_sync.py  notes.txt  package-lock.json  package.json  pyproject.toml  stignore  xcp_file_asset_routes.py  xcp_file_categories.py  xcp_file_common.py  xcp_file_image_routes.py  xcp_file_json_routes.py  xcp_file_prompt_book_routes.py  xcp_file_server.py  xcp_loraStack.py  xcp_version_check.py
.deepseek/: FRAMEWORK-Backend.md  FRAMEWORK-Basta.md  FRAMEWORK-Fatha.md  FRAMEWORK-Herbina.md  FRAMEWORK-Motha.md  FRAMEWORK-Nodes.md  instructions.md  instructions.sync-conflict-20260617-105702-LJJ6EMJ.md  memory.md
.deepseek/pastes/: fatha-layout-localization.md  multi-color-key-system.md  paste-2026-05-15-165945-c7b62765.md  paste-2026-05-16-194035-f56ad29c.md  paste-2026-05-16-194106-2e3dbbb1.md  paste-2026-05-17-032932-12bd2dc0.md  publish-debug-2026-05-30-v1.0.10.md  publish-debug-2026-05-30-v1.0.10.sync-conflict-20260617-105702-LJJ6EMJ.md
.deepseek/state/: subagents.v1.json
.github/workflows/: publish_action.yml
.monkeycode/: MEMORY.md
.syncthing-identity/: cert.pem  config.xml  https-cert.pem  https-key.pem  key.pem
_temp/: clean_changelog.py  locale_update.py  ps_test.py  search_models.py  skill-creator-audit.md
_temp/Comfyui-ZiT-Lora-loader-main/: LICENSE  README.md  __init__.py  pyproject.toml  zimage_turbo_lora_loader.py
_temp/Comfyui-ZiT-Lora-loader-main/js/: zimage_lora_stack.js
derp_docs/: 00_Project_Name_MOC.md  CHANGELOG.md  FRAMEWORK-Backend.md  FRAMEWORK-Basta.md  FRAMEWORK-Clipping.md  FRAMEWORK-Docking.md  FRAMEWORK-Fatha.md  FRAMEWORK-Herbina.md  FRAMEWORK-Motha.md  FRAMEWORK-Nodes.md  FRAMEWORK-Optimization.md  FRAMEWORK-ThemePalette.md  INDEX.md  INDEX_ZH.md  README.md  TODO.md  Welcome.md
derp_docs/.obsidian/: app.json  appearance.json  workspace.json
derp_docs/ControlDeck Nodes/: Derp Clip Loader.md  Derp Clip Loader_ZH.md  Derp Diffusion Loader.md  Derp Diffusion Loader_ZH.md  Derp Latent.md  Derp Latent_ZH.md  Derp Model Loader.md  Derp Model Loader_ZH.md  Derp Sampler Loader.md  Derp Sampler Loader_ZH.md  Derp Scheduler Loader.md  Derp Scheduler Loader_ZH.md  Derp SeedV2.md  Derp SeedV2_ZH.md  Derp Vae Loader.md  Derp Vae Loader_ZH.md
derp_docs/Loader Nodes/: Derp Clip Loader.md  Derp Clip Loader_ZH.md  Derp Diffusion Loader.md  Derp Diffusion Loader_ZH.md  Derp Latent.md  Derp Latent_ZH.md  Derp Model Loader.md  Derp Model Loader_ZH.md  Derp Sampler Loader.md  Derp Sampler Loader_ZH.md  Derp Scheduler Loader.md  Derp Scheduler Loader_ZH.md  Derp Vae Loader.md  Derp Vae Loader_ZH.md
js/: bypassExtender.js  derpConcatenate.js  derpFathaTemplate.js  derpPromptBook.js  derpPromptBook_core.js  derpSignalOut.js  derpSignalOut_core.js  derpTemplate.js  derpTemplateV2.js  derpUncleTemplate.js  masterSettings.js  paletteExtender.js  wirelessExtender.js  xcp_version_check.js
js/fatha/: basta.js  (+2 more)
locales/: en-US.json  ru-RU.json  zh-CN.json
python/: _fix_toml.py  bundled_asset_sync.py  derpConcatenate.py  derpControldeck.py  derpSamplerLoader.py  derpSeedV2.py  derpSeedV3.py  derpSignalOut.py  derpStringV3.py  derpTemplate.py  derpThemeManagerV2.py  derpUtilities.py  signalDictionaryDefault.py  xcpDerpLoraLoader.py
scripts/: app.js
tests/: horizontalDockAttach.test.js  setup.js  widgetsUtils.test.js
tools/: codewhale_turn_complete_piper.ps1  codex_turn_complete.ps1  codex_turn_complete_piper.ps1  photoshop_mcp_server.py  syncthing_identity_backup.sh  syncthing_identity_restore.sh  xcp_vision_bridge.py
(+326 files in other folders)
