[project]
name = "xcp_derpNodes"
description = "A ComfyUI custom node pack for derp-themed workflow utilities, loaders, dockable UI panels, palettes, and prompt tools."
version = "1.0.3"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/lordwedggie/xcpDerpNodes-release"
Documentation = "https://github.com/lordwedggie/xcpDerpNodes-release"
"Bug Tracker" = "https://github.com/lordwedggie/xcpDerpNodes-release/issues"

[tool.comfy]
PublisherId = "lordwedggie522"
DisplayName = "xcp_derpNodes"
Icon = ""
includes = []