[project]
name = "xcp_derp-UI"
description = "A ComfyUI custom node pack for derp-themed workflow utilities, loaders, dockable UI panels, palettes, and prompt tools."
version = "0.7.8"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/lordwedggie/xcp_derp-UI-Release"
Documentation = "https://github.com/lordwedggie/xcp_derp-UI-Release"
"Bug Tracker" = "https://github.com/lordwedggie/xcp_derp-UI-Release/issues"

[tool.comfy]
PublisherId = "lordwedggie522"
DisplayName = "xcp_derp-UI"
Icon = ""
includes = []